# ChangeLog for sci-chemistry/vmd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-chemistry/vmd/ChangeLog,v 1.43 2012/01/10 13:49:48 jlec Exp $

  10 Jan 2012; Justin Lecher <jlec@gentoo.org> vmd-1.9.ebuild, metadata.xml:
  Enhance nofetch msg, fix compilation with USE=cuda and gcc != 4.4*, thanks
  xarthisius for the help

  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop maintainer due retirement, bug #105599

  15 Jun 2011; Justin Lecher <jlec@gentoo.org> vmd-1.8.7-r2.ebuild,
  vmd-1.9.ebuild:
  FILESDIR is gone, wverything is mirrored now.

  13 Jun 2011; Justin Lecher <jlec@gentoo.org> vmd-1.8.7-r2.ebuild,
  vmd-1.9.ebuild:
  Mirrored files aren't fetchrestricted

  13 Jun 2011; Justin Lecher <jlec@gentoo.org> vmd-1.8.7-r2.ebuild,
  -files/vmd-1.8.7-gentoo.patch, -files/vmd-1.8.7-respect-flags.patch,
  vmd-1.9.ebuild, -files/vmd-1.9-gentoo-base.patch,
  -files/vmd-1.9-gentoo-plugins.patch, -files/vmd.desktop, -files/vmd.png:
  No binaryfiles in VCS please, #370915

  27 Mar 2011; Justin Lecher <jlec@gentoo.org> vmd-1.9.ebuild:
  Correct version of cuda dep, #360401

*vmd-1.9 (22 Mar 2011)

  22 Mar 2011; Justin Lecher <jlec@gentoo.org> vmd-1.8.7-r2.ebuild,
  +vmd-1.9.ebuild, +files/vmd-1.9-gentoo-base.patch,
  +files/vmd-1.9-gentoo-plugins.patch, metadata.xml:
  Version Bump, #358981; Dropped ppc due to missing KEYWORDS in DEPs

  22 Mar 2011; Justin Lecher <jlec@gentoo.org> vmd-1.8.7-r2.ebuild:
  Restrict fltk version being able to return includedir

  20 Mar 2011; Justin Lecher <jlec@gentoo.org> -vmd-1.8.7-r1.ebuild,
  vmd-1.8.7-r2.ebuild:
  x11-libs/fltk SLOTMOVE 1.1 -> 1, corrected ebuild accordingly

  11 Dec 2010; Justin Lecher <jlec@gentoo.org> vmd-1.8.7-r2.ebuild:
  QA on quoting

  30 Oct 2010; Justin Lecher <jlec@gentoo.org> vmd-1.8.7-r2.ebuild:
  Corrected msms DEP to sci-chemistry/msms-bin

  21 Aug 2010; Alexey Shvetsov <alexxy@gentoo.org> vmd-1.8.7-r2.ebuild,